--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,12 +8,11 @@ jobs:
     name: SOOS SAST Analysis Example
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Run SOOS SAST Analysis
-        uses: soos-io/soos-sast-github-action@v1.0.0
+      - name: Run SOOS DAST Analysis
+        uses: soos-io/soos-dast-github-action@v1
         with:
           client_id: necqtvcff
-          api_key: NTFiMDRiMWMtNmVkMy00ZTU1LThjYWUtODM0NzQyZjk3MjYz 
+          api_key: NTFiMDRiMWMtNmVkMy00ZTU1LThjYWUtODM0NzQyZjk3MjYz
           project_name: "pipeline"
           scan_mode: "baseline"
           api_url: "https://api.soos.io/api/"
