--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run SOOS DAST Analysis
-        uses: soos-io/soos-sast-github-action@v1.0.0
+        uses: soos-io/soos-sast-github-action@v1
         with:
           client_id: necqtvcff
           api_key: NTFiMDRiMWMtNmVkMy00ZTU1LThjYWUtODM0NzQyZjk3MjYz
@@ -28,7 +28,7 @@ jobs:
           api_key: NTFiMDRiMWMtNmVkMy00ZTU1LThjYWUtODM0NzQyZjk3MjYz
           project_name: "pipeline"
           scan_mode: "baseline"
-          api_url: "https://api.soos.io/api/"
+          api_url: "https://api.dast.io/api/"
           target_url: "https://www.example.com/"
   build:
     runs-on: ubuntu-latest
