--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,34 +17,34 @@ jobs:
           scan_mode: "baseline"
           api_url: "https://api.soos.io/api/"
           target_url: "https://www.example.com/"
-  build:
+ 
+  build_and_test:
+    name: Build and Test
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v2
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-    
-    - name: Cache Maven dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-    - name: Build project with Maven
-      run: |
-        cd demo
-        mvn -B clean install
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
-    - name: Test project with Maven
-      run: |
-        cd demo
-        mvn test
+      - name: Build project with Maven
+        run: mvn -B clean install 
+
+      - name: Test project with Maven 
+        run: mvn test
+
+      - name: Collect code coverage 
+        uses: codecov/codecov-action@v3 
 
         
 
